# Backtester-Oriented-Market-Data-Pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
market_data/: __init__.py  api.py  events.py  ingestion.py  normalization.py  storage.py
scripts/: fetch_data.py
